// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingIcon Style tests should have active LoadingIcon styles 1`] = `
Array [
  .circuit-1 {
  opacity: 0;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
  height: 16px;
  width: 16px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div
    aria-busy="true"
    aria-live="assertive"
    className="circuit-0 circuit-1 circuit-2"
    role="alertdialog"
    size="kilo"
  >
    <div>
      spinner.svg
    </div>
  </div>,
  .circuit-0 {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  height: 16px;
  width: 16px;
}

<div
    className="circuit-0 circuit-1"
    size="kilo"
  >
    <div>
      success.svg
    </div>
  </div>,
]
`;

exports[`LoadingIcon Style tests should have disabled LoadingIcon styles 1`] = `
Array [
  .circuit-1 {
  opacity: 0;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  height: 16px;
  width: 16px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div
    aria-busy="true"
    aria-live="assertive"
    className="circuit-0 circuit-1 circuit-2"
    role="alertdialog"
    size="kilo"
  >
    <div>
      spinner.svg
    </div>
  </div>,
  .circuit-0 {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  height: 16px;
  width: 16px;
}

<div
    className="circuit-0 circuit-1"
    size="kilo"
  >
    <div>
      success.svg
    </div>
  </div>,
]
`;

exports[`LoadingIcon Style tests should have giga LoadingIcon styles 1`] = `
Array [
  .circuit-1 {
  opacity: 0;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  height: 32px;
  width: 32px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div
    aria-busy="true"
    aria-live="assertive"
    className="circuit-0 circuit-1 circuit-2"
    role="alertdialog"
    size="giga"
  >
    <div>
      spinner.svg
    </div>
  </div>,
  .circuit-0 {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  height: 32px;
  width: 32px;
}

<div
    className="circuit-0 circuit-1"
    size="giga"
  >
    <div>
      success.svg
    </div>
  </div>,
]
`;

exports[`LoadingIcon Style tests should have kilo LoadingIcon styles 1`] = `
Array [
  .circuit-1 {
  opacity: 0;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  height: 16px;
  width: 16px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div
    aria-busy="true"
    aria-live="assertive"
    className="circuit-0 circuit-1 circuit-2"
    role="alertdialog"
    size="kilo"
  >
    <div>
      spinner.svg
    </div>
  </div>,
  .circuit-0 {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  height: 16px;
  width: 16px;
}

<div
    className="circuit-0 circuit-1"
    size="kilo"
  >
    <div>
      success.svg
    </div>
  </div>,
]
`;

exports[`LoadingIcon Style tests should have mega LoadingIcon styles 1`] = `
Array [
  .circuit-1 {
  opacity: 0;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  height: 24px;
  width: 24px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div
    aria-busy="true"
    aria-live="assertive"
    className="circuit-0 circuit-1 circuit-2"
    role="alertdialog"
    size="mega"
  >
    <div>
      spinner.svg
    </div>
  </div>,
  .circuit-0 {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  height: 24px;
  width: 24px;
}

<div
    className="circuit-0 circuit-1"
    size="mega"
  >
    <div>
      success.svg
    </div>
  </div>,
]
`;

exports[`LoadingIcon Style tests should have success LoadingIcon styles 1`] = `
Array [
  .circuit-1 {
  opacity: 0;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  height: 16px;
  width: 16px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div
    aria-busy="true"
    aria-live="assertive"
    className="circuit-0 circuit-1 circuit-2"
    role="alertdialog"
    size="kilo"
  >
    <div>
      spinner.svg
    </div>
  </div>,
  .circuit-0 {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  height: 16px;
  width: 16px;
}

<div
    className="circuit-0 circuit-1"
    size="kilo"
  >
    <div>
      success.svg
    </div>
  </div>,
]
`;
